--- a/src/templates/_menu.pug
+++ b/src/templates/_menu.pug
@@ -1,4 +1,8 @@
-div
-  a(href="/index.html") index.html
-  a(href="/access.html") access.html
-  a(href="/members/taro.html") taro.html
+// pugではdivを省略可
+.menu
+  .menu__item
+    a(href="/index.html") index.html
+  .menu__item
+    a(href="/access.html") access.html
+  .menu__item
+    a(href="/members/taro.html") taro.html
